# ppm2png

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/: ppm_to_png.h
src/: main.cpp  ppm_to_png.cpp
